--- a/pokemon-or-npm/package.json
+++ b/pokemon-or-npm/package.json
@@ -2,7 +2,7 @@
   "name": "pokemon-or-npm",
   "version": "1.0.0",
   "description": "Esse pacote tem um script que verifica se o pacote é um pokemon ou uma lib",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
