instalando a lib npm i readline-sync@1.4 para ler algumas informações, como, por exemplo, funções específicas(question)

--- a/pokemon-or-npm/package.json
+++ b/pokemon-or-npm/package.json
@@ -12,5 +12,8 @@
     "npm"
   ],
   "author": "Guilherme Soares <guilherme.limasoares@hotmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "1.4"
+  }
 }
